--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,135 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+NewBUILD/MonoBleedingEdge/EmbedRuntime/mono-2.0-bdwgc.dll
+NewBUILD/MonoBleedingEdge/EmbedRuntime/MonoPosixHelper.dll
+NewBUILD/MonoBleedingEdge/etc/mono/2.0/Browsers/Compat.browser
+NewBUILD/MonoBleedingEdge/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+NewBUILD/MonoBleedingEdge/etc/mono/2.0/machine.config
+NewBUILD/MonoBleedingEdge/etc/mono/2.0/settings.map
+NewBUILD/MonoBleedingEdge/etc/mono/2.0/web.config
+NewBUILD/MonoBleedingEdge/etc/mono/4.0/Browsers/Compat.browser
+NewBUILD/MonoBleedingEdge/etc/mono/4.0/DefaultWsdlHelpGenerator.aspx
+NewBUILD/MonoBleedingEdge/etc/mono/4.0/machine.config
+NewBUILD/MonoBleedingEdge/etc/mono/4.0/settings.map
+NewBUILD/MonoBleedingEdge/etc/mono/4.0/web.config
+NewBUILD/MonoBleedingEdge/etc/mono/4.5/Browsers/Compat.browser
+NewBUILD/MonoBleedingEdge/etc/mono/4.5/DefaultWsdlHelpGenerator.aspx
+NewBUILD/MonoBleedingEdge/etc/mono/4.5/machine.config
+NewBUILD/MonoBleedingEdge/etc/mono/4.5/settings.map
+NewBUILD/MonoBleedingEdge/etc/mono/4.5/web.config
+NewBUILD/MonoBleedingEdge/etc/mono/browscap.ini
+NewBUILD/MonoBleedingEdge/etc/mono/config
+NewBUILD/MonoBleedingEdge/etc/mono/mconfig/config.xml
+NewBUILD/Nora.exe
+NewBUILD/Nora_Data/app.info
+NewBUILD/Nora_Data/boot.config
+NewBUILD/Nora_Data/globalgamemanagers
+NewBUILD/Nora_Data/globalgamemanagers.assets
+NewBUILD/Nora_Data/level0
+NewBUILD/Nora_Data/level1
+NewBUILD/Nora_Data/Managed/Assembly-CSharp.dll
+NewBUILD/Nora_Data/Managed/Mono.Security.dll
+NewBUILD/Nora_Data/Managed/mscorlib.dll
+NewBUILD/Nora_Data/Managed/netstandard.dll
+NewBUILD/Nora_Data/Managed/System.ComponentModel.Composition.dll
+NewBUILD/Nora_Data/Managed/System.Configuration.dll
+NewBUILD/Nora_Data/Managed/System.Core.dll
+NewBUILD/Nora_Data/Managed/System.Data.dll
+NewBUILD/Nora_Data/Managed/System.Diagnostics.StackTrace.dll
+NewBUILD/Nora_Data/Managed/System.dll
+NewBUILD/Nora_Data/Managed/System.Drawing.dll
+NewBUILD/Nora_Data/Managed/System.EnterpriseServices.dll
+NewBUILD/Nora_Data/Managed/System.Globalization.Extensions.dll
+NewBUILD/Nora_Data/Managed/System.IO.Compression.dll
+NewBUILD/Nora_Data/Managed/System.IO.Compression.FileSystem.dll
+NewBUILD/Nora_Data/Managed/System.Net.Http.dll
+NewBUILD/Nora_Data/Managed/System.Numerics.dll
+NewBUILD/Nora_Data/Managed/System.Runtime.Serialization.dll
+NewBUILD/Nora_Data/Managed/System.Runtime.Serialization.Xml.dll
+NewBUILD/Nora_Data/Managed/System.ServiceModel.Internals.dll
+NewBUILD/Nora_Data/Managed/System.Transactions.dll
+NewBUILD/Nora_Data/Managed/System.Xml.dll
+NewBUILD/Nora_Data/Managed/System.Xml.Linq.dll
+NewBUILD/Nora_Data/Managed/System.Xml.XPath.XDocument.dll
+NewBUILD/Nora_Data/Managed/Unity.2D.Animation.Runtime.dll
+NewBUILD/Nora_Data/Managed/Unity.2D.Animation.Triangle.Runtime.dll
+NewBUILD/Nora_Data/Managed/Unity.2D.Common.Runtime.dll
+NewBUILD/Nora_Data/Managed/Unity.2D.PixelPerfect.dll
+NewBUILD/Nora_Data/Managed/Unity.2D.SpriteShape.Runtime.dll
+NewBUILD/Nora_Data/Managed/Unity.InternalAPIEngineBridge.001.dll
+NewBUILD/Nora_Data/Managed/Unity.Mathematics.dll
+NewBUILD/Nora_Data/Managed/Unity.TextMeshPro.dll
+NewBUILD/Nora_Data/Managed/Unity.Timeline.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.AccessibilityModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.AIModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.AndroidJNIModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.AnimationModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.ARModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.AssetBundleModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.AudioModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.ClothModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.ClusterInputModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.ClusterRendererModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.CoreModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.CrashReportingModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.DirectorModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.DSPGraphModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.GameCenterModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.GridModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.HotReloadModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.ImageConversionModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.IMGUIModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.InputLegacyModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.InputModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.JSONSerializeModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.LocalizationModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.ParticleSystemModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.PerformanceReportingModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.Physics2DModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.PhysicsModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.ProfilerModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.ScreenCaptureModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.SharedInternalsModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.SpriteMaskModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.SpriteShapeModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.StreamingModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.SubstanceModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.SubsystemsModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.TerrainModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.TerrainPhysicsModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.TextCoreModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.TextRenderingModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.TilemapModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.TLSModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UI.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UIElementsModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UIModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UmbraModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UNETModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UnityAnalyticsModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UnityConnectModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UnityTestProtocolModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UnityWebRequestAssetBundleModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UnityWebRequestAudioModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UnityWebRequestModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UnityWebRequestTextureModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.UnityWebRequestWWWModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.VehiclesModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.VFXModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.VideoModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.VRModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.WindModule.dll
+NewBUILD/Nora_Data/Managed/UnityEngine.XRModule.dll
+NewBUILD/Nora_Data/resources.assets
+NewBUILD/Nora_Data/resources.assets.resS
+NewBUILD/Nora_Data/Resources/unity default resources
+NewBUILD/Nora_Data/Resources/unity_builtin_extra
+NewBUILD/Nora_Data/sharedassets0.assets
+NewBUILD/Nora_Data/sharedassets0.assets.resS
+NewBUILD/Nora_Data/sharedassets0.resource
+NewBUILD/Nora_Data/sharedassets1.assets
+NewBUILD/Nora_Data/sharedassets1.assets.resS
+NewBUILD/UnityCrashHandler64.exe
+NewBUILD/UnityPlayer.dll
